--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,13 +2,13 @@ version: '3.8'
 
 services:
   app:
-    container_name: nextjs_prod_app
+    container_name: nextjs_prod_app_v2
     build:
       context: .
       dockerfile: Dockerfile
       target: runner
     ports:
-      - "3000:3000"
+      - "3001:3000"
     env_file:
       - docker.env
     environment:
